fix(TBD-7361): add 6.0.1 MapR distribution

--- a/main/plugins/org.talend.hadoop.distribution.mapr601/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr601/plugin.xml
@@ -2,6 +2,12 @@
 <?eclipse version="3.0"?>
 <plugin>
    <extension point="org.talend.core.runtime.librariesNeeded">
+        <!-- NAME/ID/URI of winutils MUST equals to value returned by Distribution.getWinUtilsName() -->
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.mapr.6.0.1"
+            id="winutils-hadoop-2.7.0.exe"
+            name="winutils-hadoop-2.7.0.exe"
+            mvn_uri="mvn:org.talend.libraries/winutils-hadoop-2.7.0/6.0.0"/>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.mapr.6.0.1"
             id="mapr-streams-6.0.1-mapr.jar"
@@ -930,6 +936,7 @@
            description="The lastest Spark libraries of MapR 6.0.1 spark 2"
            id="SPARK-LIB-MAPR601"
            name="SPARK-LIB-MAPR601">
+            <library id="winutils-hadoop-2.7.0.exe" />
 			<library id="antlr4-runtime-4.5.3.jar"/>
 			<library id="antlr-2.7.7.jar"/>
 			<library id="antlr-runtime-3.4.jar"/>
