--- a/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
@@ -3,7 +3,7 @@
 <plugin>
     <extension point="org.talend.core.runtime.librariesNeeded">
         
-        <libraryNeeded context="plugin:org.talend.hadoop.distribution.qubole" id="talend-bigdata-launcher-qubole-1.2.5-20180705.jar" name="talend-bigdata-launcher-qubole-1.2.5-20180705.jar" mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-qubole-1.2.5-20180705/7.1.0" />
+        <libraryNeeded context="plugin:org.talend.hadoop.distribution.qubole" id="talend-bigdata-launcher-qubole-1.2.6-20180720.jar" name="talend-bigdata-launcher-qubole-1.2.6-20180720.jar" mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-qubole-1.2.6-20180720/7.1.0" />
 
 		<!-- Qubole SDK 0.9.1 and it's dependencies -->
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.qubole" id="qds-sdk-java-0.9.1.jar" name="qds-sdk-java-0.9.1.jar" mvn_uri="mvn:com.qubole.qds-sdk-java/qds-sdk-java/0.9.1" />
@@ -247,6 +247,12 @@
 		</libraryNeeded>
 		<libraryNeeded
 			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="spark-streaming_2.11-2.2.0.jar"
+			name="spark-streaming_2.11-2.2.0.jar"
+			mvn_uri="mvn:org.apache.spark/spark-streaming_2.11/2.2.0">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
 			id="wsdl4j-1.6.3.jar"
 			name="wsdl4j-1.6.3.jar"
 			mvn_uri="mvn:wsdl4j/wsdl4j/1.6.3">
@@ -286,7 +292,7 @@
 
         <!-- Big data launcher group -->
         <libraryNeededGroup description="qubole big data launcher and its dependencies" id="BIGDATA-LAUNCHER-LIB-QUBOLE" name="BIGDATA-LAUNCHER-LIB-QUBOLE ">
-            <library id="talend-bigdata-launcher-qubole-1.2.5-20180705.jar" />
+            <library id="talend-bigdata-launcher-qubole-1.2.6-20180720.jar" />
             <library id="qds-sdk-java-0.9.1.jar" />
             <library id="javax.ws.rs-api-2.0.jar" />
             <library id="jersey-client-2.5.jar" />
@@ -379,6 +385,13 @@
         <!-- Spark Streaming 2.2 group -->
         <libraryNeededGroup
            description="Spark Streaming 2.2 libraries for Qubole" id="SPARK-STREAMING-LIB-QUBOLE" name="SPARK-STREAMING-LIB-QUBOLE">
+             <library id="spark-streaming_2.11-2.2.0.jar"/>
+        </libraryNeededGroup>
+
+        <!-- Spark Streaming 2.2 MRREQUIRED group -->
+        <libraryNeededGroup
+           description="Spark Streaming 2.2 MRREQUIRED libraries for Qubole" id="SPARK-STREAMING-LIB-MRREQUIRED-QUBOLE" name="SPARK-STREAMING-LIB-QUBOLE">
+           	 <library id="talend-bigdata-launcher-qubole-1.2.6-20180720.jar" />
         </libraryNeededGroup>
 
     </extension>
