TBD-7413, TBD-7414 fixed

--- a/main/plugins/org.talend.hadoop.distribution.mapr601/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr601/plugin.xml
@@ -12,7 +12,7 @@
             context="plugin:org.talend.hadoop.distribution.mapr.6.0.1"
             id="mapr-streams-6.0.1-mapr.jar"
             name="mapr-streams-6.0.1-mapr.jar"
-            mvn_uri="mvn:com.mapr.streams/mapr-streams-6.0.1-mapr/6.0.0"/>
+            mvn_uri="mvn:com.mapr.streams/mapr-streams/6.0.1-mapr"/>
         <libraryNeeded
             context="plugin:org.talend.libraries.hadoop.mapr.6.0.1"
             id="datanucleus-api-jdo-4.2.4.jar"
@@ -387,13 +387,13 @@
             context="plugin:org.talend.libraries.hadoop.mapr.6.0.1" 
             id="ojai-2.0.1-mapr-1804.jar" 
             name="ojai-2.0.1-mapr-1804.jar"
-            mvn_uri="mvn:org.talend.libraries/ojai/2.0.1-mapr-1804">
+            mvn_uri="mvn:org.talend.libraries/ojai-2.0.1-mapr-1804/6.0.0">
         </libraryNeeded> 
         <libraryNeeded 
             context="plugin:org.talend.libraries.hadoop.mapr.6.0.1" 
             id="mapr-ojai-driver-6.0.1-mapr.jar" 
             name="mapr-ojai-driver-6.0.1-mapr.jar"
-            mvn_uri="mvn:org.talend.libraries/mapr-ojai-driver/6.0.1-mapr">
+            mvn_uri="mvn:org.talend.libraries/mapr-ojai-driver-6.0.1-mapr/6.0.0">
         </libraryNeeded> 
         <libraryNeeded 
             context="plugin:org.talend.libraries.hadoop.mapr.6.0.1" 
