fix dynamodb and kinesis

--- a/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
@@ -288,11 +288,36 @@
 			name="jaxen-1.1.6.jar"
 			mvn_uri="mvn:jaxen/jaxen/1.1.6">
 		</libraryNeeded>
+
 		<libraryNeeded
 			context="plugin:org.talend.hadoop.distribution.qubole"
 			id="aws-java-sdk-dynamodb-1.11.160.jar"
 			name="aws-java-sdk-dynamodb-1.11.160.jar"
 			mvn_uri="mvn:com.amazonaws/aws-java-sdk-dynamodb-1.11.160/6.0.0">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="emr-dynamodb-hadoop-4.2.0.jar"
+			name="emr-dynamodb-hadoop-4.2.0.jar"
+			mvn_uri="mvn:com.amazon.emr/emr-dynamodb-hadoop-4.2.0/6.0.0">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="aws-java-sdk-1.11.160.jar"
+			name="aws-java-sdk-1.11.160.jar"
+			mvn_uri="mvn:com.amazonaws/aws-java-sdk-1.11.160/6.0.0">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="spark-streaming-kinesis-asl_2.11-2.2.0.jar"
+			name="spark-streaming-kinesis-asl_2.11-2.2.0.jar"
+			mvn_uri="mvn:org.apache.spark/spark-streaming-kinesis-asl_2.11-2.2.0/6.0.0">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="amazon-kinesis-client-1.9.1.jar"
+			name="amazon-kinesis-client-1.9.1.jar"
+			mvn_uri="mvn:com.amazonaws/amazon-kinesis-client-1.9.1/6.0.0">
 		</libraryNeeded>
 
 
@@ -392,6 +417,15 @@
         <libraryNeededGroup
            description="Spark 2.2 dynamodb libraries for Qubole" id="SPARK-DYNAMODB-LIB-QUBOLE" name="SPARK-DYNAMODB-LIB-QUBOLE">
              <library id="aws-java-sdk-dynamodb-1.11.160.jar"/>
+             <library id="emr-dynamodb-hadoop-4.2.0.jar"/>
+        </libraryNeededGroup>
+
+        <!-- Spark Streaming 2.2 kinesis group -->
+        <libraryNeededGroup
+           description="Spark 2.2 kinesis libraries for Qubole" id="SPARK-KINESIS-LIB-QUBOLE" name="SPARK-KINESIS-LIB-QUBOLE">
+             <library id="aws-java-sdk-1.11.160.jar"/>
+             <library id="spark-streaming-kinesis-asl_2.11-2.2.0.jar"/>
+             <library id="amazon-kinesis-client-1.9.1.jar"/>
         </libraryNeededGroup>
 
         <!-- Spark Streaming 2.2 group -->
