typo in spark-tags

--- a/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
@@ -595,7 +595,7 @@
             context="plugin:org.talend.hadoop.distribution.emr5150"
             id="spark-tags_2.11-2.3.0.jar"
             name="spark-tags_2.11-2.3.0.jar"
-            mvn_uri="mvn:org.apache.spark/Spark-tags_2.11/2.3.0"/>
+            mvn_uri="mvn:org.apache.spark/spark-tags_2.11/2.3.0"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
