--- a/main/plugins/org.talend.hadoop.distribution.hdp260/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp260/plugin.xml
@@ -1063,6 +1063,7 @@
 			<library id="commons-collections-3.2.2.jar"/>
 			<library id="commons-io-2.4.jar"/>
 			<library id="commons-configuration-1.6.jar"/>
+			<library id="commons-lang-2.6.jar"/>
 			<library id="commons-lang3-3.5.jar"/>
 			<library id="commons-logging-1.1.3.jar"/>
 			<library id="guava-11.0.2.jar"/>
