feat(TBD-4089) Add HCatalog support for sqoop export

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
@@ -10,8 +10,13 @@ TEMPFILE.NAME=Temp data directory path
 COMMON_SQOOP_OPTIONS.NAME=Common arguments
 CONTROL_SQOOP_OPTIONS.NAME=Export control arguments
 CONNECTION.NAME=Connection
-TABLE.NAME=Table Name
-EXPORT_DIR.NAME=Export Dir
+TABLE.NAME=Target table name
+SOURCE.NAME=Input source
+SOURCE.ITEM.HDFS=HDFS
+SOURCE.ITEM.HCAT=HCatalog
+EXPORT_DIR.NAME=HDFS source directory
+HCAT_DATABASE.NAME=HCatalog database
+HCAT_TABLE.NAME=HCatalog table
 USERNAME.NAME=Username
 PASSWORD.NAME=Password
 PASSWORD_STORED_IN_FILE.NAME=The password is stored in a file
